rename collections to buckets
