# docs/swagger.json
@@ -486,23 +486,23 @@
         }
       }
     },
-    "/collections/": {
+    "/buckets/": {
       "get": {
-        "description": "This endpoint is used to list all collections. Whenever a user logs on estuary, it will list all collections that the user has access to. This endpoint provides a way to list all collections to the user.",
+        "description": "This endpoint is used to list all buckets. Whenever a user logs on estuary, it will list all buckets that the user has access to. This endpoint provides a way to list all buckets to the user.",
         "produces": [
           "application/json"
         ],
         "tags": [
-          "collections"
+          "buckets"
         ],
-        "summary": "List all collections",
+        "summary": "List all buckets",
         "responses": {
           "200": {
             "description": "OK",
             "schema": {
               "type": "array",
               "items": {
-                "$ref": "#/definitions/collections.Collection"
+                "$ref": "#/definitions/buckets.Bucket"
               }
             }
           },
@@ -527,22 +527,22 @@
         }
       },
       "post": {
-        "description": "This endpoint is used to create a new collection. A collection is a representaion of a group of objects added on the estuary. This endpoint can be used to create a new collection.",
+        "description": "This endpoint is used to create a new bucket. A bucket is a representaion of a group of objects added on the estuary. This endpoint can be used to create a new bucket.",
         "produces": [
           "application/json"
         ],
         "tags": [
-          "collections"
+          "buckets"
         ],
-        "summary": "Create a new collection",
+        "summary": "Create a new bucket",
         "parameters": [
           {
-            "description": "Collection name and description",
+            "description": "Bucket name and description",
             "name": "body",
             "in": "body",
             "required": true,
             "schema": {
-              "$ref": "#/definitions/main.createCollectionBody"
+              "$ref": "#/definitions/main.createBucketBody"
             }
           }
         ],
@@ -550,7 +550,7 @@
           "200": {
             "description": "OK",
             "schema": {
-              "$ref": "#/definitions/collections.Collection"
+              "$ref": "#/definitions/buckets.Bucket"
             }
           },
           "400": {
@@ -574,20 +574,20 @@
         }
       }
     },
-    "/collections/fs/add": {
+    "/buckets/fs/add": {
       "post": {
-        "description": "This endpoint adds a file to a collection",
+        "description": "This endpoint adds a file to a bucket",
         "produces": [
           "application/json"
         ],
         "tags": [
-          "collections"
+          "buckets"
         ],
-        "summary": "Add a file to a collection",
+        "summary": "Add a file to a bucket",
         "parameters": [
           {
             "type": "string",
-            "description": "Collection ID",
+            "description": "Bucket ID",
             "name": "coluuid",
             "in": "query",
             "required": true
@@ -629,16 +629,16 @@
         }
       }
     },
-    "/collections/{coluuid}": {
+    "/buckets/{coluuid}": {
       "get": {
-        "description": "This endpoint is used to get contents in a collection. If no colpath query param is passed",
+        "description": "This endpoint is used to get contents in a bucket. If no colpath query param is passed",
         "produces": [
           "application/json"
         ],
         "tags": [
-          "collections"
+          "buckets"
         ],
-        "summary": "Get contents in a collection",
+        "summary": "Get contents in a bucket",
         "parameters": [
           {
             "type": "string",
@@ -676,7 +676,7 @@
         }
       },
       "post": {
-        "description": "This endpoint adds already-pinned contents (that have ContentIDs) to a collection.",
+        "description": "This endpoint adds already-pinned contents (that have ContentIDs) to a bucket.",
         "consumes": [
           "application/json"
         ],
@@ -684,19 +684,19 @@
           "application/json"
         ],
         "tags": [
-          "collections"
+          "buckets"
         ],
-        "summary": "Add contents to a collection",
+        "summary": "Add contents to a bucket",
         "parameters": [
           {
             "type": "string",
-            "description": "Collection UUID",
+            "description": "Bucket UUID",
             "name": "coluuid",
             "in": "path",
             "required": true
           },
           {
-            "description": "Content IDs to add to collection",
+            "description": "Content IDs to add to bucket",
             "name": "contentIDs",
             "in": "body",
             "required": true,
@@ -736,15 +736,15 @@
         }
       },
       "delete": {
-        "description": "This endpoint is used to delete an existing collection.",
+        "description": "This endpoint is used to delete an existing bucket.",
         "tags": [
-          "collections"
+          "buckets"
         ],
-        "summary": "Deletes a collection",
+        "summary": "Deletes a bucket",
         "parameters": [
           {
             "type": "string",
-            "description": "Collection ID",
+            "description": "Bucket ID",
             "name": "coluuid",
             "in": "path",
             "required": true
@@ -772,16 +772,16 @@
         }
       }
     },
-    "/collections/{coluuid}/commit": {
+    "/buckets/{coluuid}/commit": {
       "post": {
-        "description": "This endpoint is used to save the contents in a collection, producing a top-level CID that references all the current CIDs in the collection.",
+        "description": "This endpoint is used to save the contents in a bucket, producing a top-level CID that references all the current CIDs in the bucket.",
         "produces": [
           "application/json"
         ],
         "tags": [
-          "collections"
+          "buckets"
         ],
-        "summary": "Produce a CID of the collection contents",
+        "summary": "Produce a CID of the bucket contents",
         "parameters": [
           {
             "type": "string",
@@ -813,20 +813,20 @@
         }
       }
     },
-    "/collections/{coluuid}/contents": {
+    "/buckets/{coluuid}/contents": {
       "delete": {
-        "description": "This endpoint is used to delete an existing content from an existing collection. If two or more files with the same contentid exist in the collection, delete the one in the specified path",
+        "description": "This endpoint is used to delete an existing content from an existing bucket. If two or more files with the same contentid exist in the bucket, delete the one in the specified path",
         "produces": [
           "application/json"
         ],
         "tags": [
-          "collections"
+          "buckets"
         ],
-        "summary": "Deletes a content from a collection",
+        "summary": "Deletes a content from a bucket",
         "parameters": [
           {
             "type": "string",
-            "description": "Collection ID",
+            "description": "Bucket ID",
             "name": "coluuid",
             "in": "path",
             "required": true
@@ -844,7 +844,7 @@
             "in": "body",
             "required": true,
             "schema": {
-              "$ref": "#/definitions/main.deleteContentFromCollectionBody"
+              "$ref": "#/definitions/main.deleteContentFromBucketBody"
             }
           }
         ],
@@ -899,7 +899,7 @@
           },
           {
             "type": "string",
-            "description": "Collection UUID",
+            "description": "Bucket UUID",
             "name": "coluuid",
             "in": "query"
           },
@@ -3020,7 +3020,7 @@
     }
   },
   "definitions": {
-    "collections.Collection": {
+    "buckets.Bucket": {
       "type": "object",
       "properties": {
         "cid": {
@@ -3057,7 +3057,7 @@
         }
       }
     },
-    "main.createCollectionBody": {
+    "main.createBucketBody": {
       "type": "object",
       "properties": {
         "description": {
@@ -3068,7 +3068,7 @@
         }
       }
     },
-    "main.deleteContentFromCollectionBody": {
+    "main.deleteContentFromBucketBody": {
       "type": "object",
       "properties": {
         "by": {
